# python_batyr

./: .gitignore  LICENSE  Procfile  README.md  models.py  pyproject.toml
app/: dependencies.py  fill_file_with_hw.py  main.py  models.py  scheduler.py  schemas.py  tasks.py  test.py
app/migrations/: 1_add_field_to_payment.py  2_alter_field_status_in_payment.py
hometask3/: pyproject.toml
hometask3/hometask3/: task3.py
hometask3/tests/: test_hometask3_pytest.py  test_hometask3_unittest.py
