[tool.poetry]
name = "python-rnm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.15.0"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"
environs = "^9.5.0"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
