[tool.poetry]
name = "hometask3"
version = "0.1.0"
description = ""
authors = ["Nariman-R <87778834+Nariman-R@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
unittest = "^0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
